# majsoul_eye

./: .gitignore  CLAUDE.md  README.md  mahjong_relative_annotation_pipeline.py  pyproject.toml  pytest.ini  requirements-worker.txt  requirements.txt
docs/: DATA_AUTOMATION.md  DESIGN.md  PIPELINE.md  SKINS.md  STATUS.md  WHAT_CUT_GOLDENS.md  dataset_review.md
majsoul_eye/: __init__.py  coords.py  hud.py  normalize.py  paths.py  tiles.py
scripts/: README.md  annotate_ai_session.py  autoplay_ai.py  build_case_annotations.py  build_dataset.py  calibrate_annotation_model.py  convert_mjcopilot.py  crop_game.py  deletterbox_frames.py  ingest_run.py  inspect_capture.py  migrate_captures_layout.py  mycv_baseline.py  overlay_labels.py  record_gt.py  spike_autoplay.py  spike_decode_frames.py  spike_decode_full.py  spike_topdown.py  spike_ws_tap.py  train_classifier.py  visualize_failures.py
tests/: samples_golden.json  test_annotate_ai_session.py  test_annotate_frame.py  test_annotate_pipeline.py  test_assemble.py  test_autoplay_autonext.py  test_autoplay_gt.py  test_autoplay_opdelay.py  test_autoplay_stability.py  test_backfill_skin_meta.py  test_backs.py  test_board_geometry.py  test_btnbg.py  test_build_datasets.py  test_build_gate.py  test_button_hygiene.py  test_button_plates.py  test_call_window.py  test_classifier.py  test_consistency.py  test_consistency_golden.py  test_coords.py  test_count_dora_glow.py  test_detector.py  test_dora_glow.py  test_downstream_rewire.py  test_eval_reconstruction.py  test_gamemeta.py  test_history_baseline.py  test_history_solver.py  (+50 more)
(+142 files in other folders)
